--- a/back/package.json
+++ b/back/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "14.x"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/serve.js"
+    "dev": "nodemon src/serve.js",
+    "start": "node ./src/serve.js"
   },
   "author": "",
   "license": "ISC",
