--- a/back/vercel.json
+++ b/back/vercel.json
@@ -9,7 +9,10 @@
   "routes": [
     {
       "src": "(.*)",
-      "dest": "src/server.ts"
+      "dest": "src/server.ts",
+      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
     }
   ]
 }
