--- a/back/vercel.json
+++ b/back/vercel.json
@@ -12,6 +12,6 @@
       "dest": "src/server.ts",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "https://projeto-lumi-ntdkue20y-devjjs-projects-dd81c9bd.vercel.app"
     }
 }
